# ethereum-decoder

./: .gitignore  BUILDING.md  CMakeLists.txt  Makefile.manual  Makefile.simple  README.md  clean  clean.sh  fetch_dependencies.sh  install_dependencies.sh  make.sh  make_decode_clickhouse.sh  make_decode_log.sh  make_ethereum_decoder_lib.sh
abis/: test.json
app/: decode_log.cpp
app/decode_clickhouse/: main.cpp
app/decode_clickhouse/include/: decode_clickhouse_arg_parser.h  progress_display.h
app/decode_clickhouse/include/clickhouse/: clickhouse_client.h  clickhouse_config.h  clickhouse_ethereum.h  clickhouse_query_config.h
app/decode_clickhouse/include/log-writer/: clickhouse_writer.h  database_writer.h
app/decode_clickhouse/include/parquet/: parquet_database_writer.h  parquet_writer.h
app/decode_clickhouse/src/: decode_clickhouse_arg_parser.cpp  progress_display.cpp
app/decode_clickhouse/src/clickhouse/: clickhouse_client.cpp  clickhouse_ethereum.cpp  clickhouse_query_config.cpp
app/decode_clickhouse/src/log-writer/: clickhouse_writer.cpp  database_writer.cpp
app/decode_clickhouse/src/parquet/: parquet_database_writer.cpp  parquet_writer.cpp
app/decode_log/: main.cpp
app/decode_log/src/: decode_log_arg_parser.cpp  decode_log_arg_parser.h
app/ethereum_decoder/: main.cpp
app/ethereum_decoder/include/: ethereum_decoder.h  types.h
app/ethereum_decoder/include/crypto/: keccak256.h  keccak256_simple.h  type_decoder.h
app/ethereum_decoder/include/decoding/: abi_parser.h
app/ethereum_decoder/include/json/: json_decoder.h
app/ethereum_decoder/src/: utils.cpp
app/ethereum_decoder/src/crypto/: keccak256.cpp  keccak256_simple.cpp
app/ethereum_decoder/src/decoding/: abi_parser.cpp  log_data.cpp  type_decoder.cpp
app/ethereum_decoder/src/json/: json_decoder.cpp
ethereum_decoder_lib/: CMakeLists.txt  README.md  build_library.sh  ethereum_decoder.hpp
ethereum_decoder_lib/cmake/: ethereum_decoder-config.cmake.in  ethereum_decoder.pc.in
ethereum_decoder_lib/examples/basic_usage/: CMakeLists.txt  main.cpp
ethereum_decoder_lib/examples/fetch_content/: CMakeLists.txt  main.cpp
examples/: decode_log.cpp  erc20_abi.json
examples/fetch_content/: CMakeLists.txt
include/ethereum_decoder/: arg_parser.h  log_data.h  log_decoder.h  types.h  utils.h
resources/docs/: LIBRARY_USE.md  QUERY_CONFIG_USAGE.md
resources/sql/: clickhouse_settings.sql  config.json  contract_abi.sql  decoded_logs_insert.sql  log_stream.sql
src/: abi_parser.cpp  arg_parser.cpp  json_decoder.cpp  keccak256.cpp  keccak256_simple.cpp  log_data.cpp  log_decoder.cpp  type_decoder.cpp  utils.cpp
test/: test_decoder.cpp
